--- a/CleanUI/src/main/AndroidManifest.xml
+++ b/CleanUI/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="devjdelasen.com.cleanui">
+    package="devjdelasen.com.cleanui"
+    >
 
-    /
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
